[PAXEXAM-655] Support WildFly 9.0